syntax = "proto3";

option go_package = "github.com/baez90/inetmock/internal/rpc";
option java_multiple_files = true;
option java_package = "com.github.baez90.inetmock.rpc";
option java_outer_classname = "HandlersProto";

package inetmock;

service Handlers {
    rpc GetHandlers(GetHandlersRequest) returns (GetHandlersResponse) {}
}

message GetHandlersRequest {
}

message GetHandlersResponse {
    repeated string handlers = 1;
}